@@ -6,6 +6,7 @@ import (
 	"html"
 	"bytes"
 	"strconv"
+	"strings"
 	"net/http"
 	"io/ioutil"
 	"archive/zip"
@@ -22,7 +23,17 @@ func p_wal(w http.ResponseWriter, r *http.Request) {
 	if !ipchecker(r) {
 		return
 	}
+	var str string
+	common.Last.Mutex.Lock()
+	if common.BlockChain.Consensus.Enforce_SEGWIT != 0 &&
+		common.Last.Block.Height >= common.BlockChain.Consensus.Enforce_SEGWIT {
+		str = "var segwit_active=true"
+	} else {
+		str = "var segwit_active=false"
+	}
+	common.Last.Mutex.Unlock()
 	page := load_template("wallet.html")
+	page = strings.Replace(page, "/*WALLET_JS_VARS*/", str, 1)
 	write_html_head(w, r)
 	w.Write([]byte(page))
 	write_html_tail(w)
